# eye5g

./: README.md
app/: gradle.properties  settings.gradle
app/app/: build.gradle
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/silentbyte/eye5g/: App.kt  AppActivity.kt  AppPreferences.kt  CameraFragment.kt  DetectionSpeaker.kt  DetectionWebSocket.kt  MainActivity.kt  SettingsActivity.kt
app/app/src/main/java/com/silentbyte/eye5g/models/: BBox.kt  Eye5GObject.kt
app/app/src/main/java/com/silentbyte/eye5g/tts/: DetectionSpeaker.kt
app/app/src/main/res/drawable/: ic_eye_off.xml  ic_eye_on.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/app/src/main/res/menu/: menu_main.xml
app/app/src/main/res/navigation/: nav_graph.xml
app/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/app/src/main/res/values-de/: arrays.xml  strings.xml
app/app/src/main/res/values-night/: themes.xml
app/app/src/main/res/values-zh/: arrays.xml  strings.xml
app/app/src/main/res/xml/: root_preferences.xml
app/gradle/wrapper/: gradle-wrapper.properties
landing/public/: eye5g.css  index.html
server/: .gitignore  .rustfmt.toml  Cargo.toml  dev_serve.sh  download_weights.sh
server/darknet/: yolov4.cfg
server/src/: main.rs
server/test_client/: test_client.py
