
[package]
name = "eye5g_server"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
darknet = { version = "0.3.2", features = ["enable-cuda", "enable-cudnn"] }
env_logger = "0.8.3"
image = "0.23.14"
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tungstenite = "0.13.0"
